syntax = "proto3";

package elevation.rpc;

import "google/protobuf/empty.proto";

option java_multiple_files = true;
option java_package = "com.intellij.execution.process.elevation.rpc";
option java_outer_classname = "ElevatorProto";

service Elevator {
  rpc CreateProcess (CreateProcessRequest) returns (CreateProcessReply) {}
  rpc AwaitTermination (AwaitTerminationRequest) returns (AwaitTerminationReply) {}
  rpc Release (ReleaseRequest) returns (google.protobuf.Empty) {}
}

message CreateProcessRequest {
  CommandLine command_line = 1;
}

message CreateProcessReply {
  uint64 pid = 1;
}

message AwaitTerminationRequest {
  uint64 pid = 1;
}

message AwaitTerminationReply {
  uint32 exit_code = 1;
}

message ReleaseRequest {
  uint64 pid = 1;
}

message CommandLine {
  repeated string command = 1;
  string working_dir = 2;
  repeated EnvironVar environ_vars = 3;

  message EnvironVar {
    string name = 1;
    string value = 2;
  }
}

